# AutoSpeed-Control

./: .gitignore  CMakeLists.txt  README.md  run_tests.bat  run_tests.sh
.agent/skills/: .version
.agent/skills/kn-doc/: SKILL.md
.agent/skills/kn-extract/: SKILL.md
.agent/skills/kn-spec/: SKILL.md
.claude/skills/kn-implement/: SKILL.md
.claude/skills/kn-plan/: SKILL.md
.claude/skills/kn-research/: SKILL.md
.github/workflows/: ci.yml
.knowns/: config.json
.knowns/.search/: index.db
src/: CarController.cpp  CarController.h
tests/: test_safety.cpp
